manifests/05-networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minishop-frontend
  namespace: webapp
spec:
  ingressClassName: nginx
  rules:
    - host: minishop.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port: {number: 8080}
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-loadbalancer-demo
  namespace: webapp
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: minishop
    app.kubernetes.io/component: frontend
  ports:
    - port: 8080
      targetPort: http
